--- a/home.css
+++ b/home.css
@@ -72,7 +72,7 @@ p.movieReview{
 	width: 50%;
 }
 .movieName{
-	background-color: #66b3ff;
+	background-color: #66b3ff;	
 }
 #para{
 	text-align: center;
@@ -80,4 +80,8 @@ p.movieReview{
 .login{
 	size: 50px;
 	margin-top: 10px;
+}
+.loginHeading{
+	font-family:Arial Black;
+	text-align: center;
 }
