--- a/home.css
+++ b/home.css
@@ -57,7 +57,6 @@
 #search{
 	float: right;
 	margin-right: 100px;
-	//margin-top: 15px;
 	width: 30%;
 }
 p.movieReview{
@@ -82,6 +81,6 @@ p.movieReview{
 	margin-top: 10px;
 }
 .loginHeading{
-	font-family:Arial Black;
+	font-family:"Arial Black";
 	text-align: center;
 }
